Add vacationType domain